--- a/Nhom6_QuanLyTiemBanh/NhanVien.resx
+++ b/Nhom6_QuanLyTiemBanh/NhanVien.resx
@@ -141,4 +141,232 @@
   <metadata name="GioiTinh.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnTimKiemTheoTen.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEsAAAAiCAYAAAAXtSR4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAetSURBVGhD7ZdbTBvZGceP0VattFW7m6qbiLaqlKoPXeWl
+        qvqw2kqVKnUbVZW2lapqu1KrbrIbNW1KstmELLlBIBhzxwmYSwhXY4OxzcVcvMbEYGMChIAJl2CCzWXx
+        ZcZjjM0lnrFnvh4TaWSy89Bqnybi4af567Psv/zTmTlzEAAc8j8iODxEGMHhIcIIDg8RRnB4iDB88JME
+        IgIEIik/CoUptOCaRbeKc1B1czNa97i+29Xf+bayrf2EUqM7oTXo3+4zdv7A0NuDFpwLKLQZRBQVQF7S
+        g7wBD/4tYZKLxQgfkmRJtiJBtLQ6j26X5byVKy/PkdboRj4t0K+dLzRupBWZvvyPrGc9o0gzfyWnsNJk
+        Nb5ntY+gwRELIkOEBMuSCIlKkFwsRviQkJWADBIoshdAo1P2v6ZLq31ni+2QrvJA2WAUVI44aGfjbO04
+        A1mdQbhQ9RTSZLq9grs1GUZzz7f3nkeQj9w4ICiZ5GIxwgc/kVhVpGRnbxMNj1n/9q8cbeRzpRfyrAA6
+        J8uubnNRYo/bDkbjoTDNbY17WbrUDnCr/zmcyTNBRZOyIxwOHNvdjSAqSEgwiesBkovFCB9IkpIQpBdN
+        OyZ/mZbbsnNNtwmlYwD5NgY0T+jYYoil3REutrrNxlxbLGN0xuliC8MVjTKQN8jBmQIjqDp6Cibn7OjB
+        eD/G+BWSi8UIH/x+L1pbW/xWgUJl/PS+G0pGAYqtUci3MCA101AyHIV7EzTUT0RBbmdANhSHQvx58XAM
+        yuwc3O57Dv+WauhGfe3ve616ZBjSfYXkYjHCh82QB408HD55vqgjIrNgEVhCrmkPsvvCkNUdhptdIbje
+        ha+GMGT3b4NsYA+KLDQUDTFYGAOlWG56/RzcrWupXVlxp7jcK+hlkovFCB82fMuoUdeZd7HWAcUjeKX0
+        72A5W3BNH9znhpbCBOG6LrBPZlcQpMbt/ZVVYo1B6cP4/nduyjU+l2vhDZfbiQUdJLlYjPCha8BwJL9G
+        ZcvSevdXVWbXJpYShJsJMToSstoJyNIQcKudxBCQrScgvz8Cd4ZoTm7Dt+YIBq+uy3JdZGzMmjrxaBS9
+        THKxGOFDrbL+eF61ek3WR0IZXllSfKvldlMg7QqAtDMAuZ0k5kXOx/OS/hAohnehejTKVWEUIzSnmADI
+        qOqJ9Q0YPjAO9qGXSS4WI3xo1WmOFNSobQUDJFTgXVBhjXKVQztchWUbFA+24a4ZryLzNpTja/XQDtTZ
+        o9A4xkDDeJSrH6PZmocxqJsCuKboZB7YvvizZWQAWezmAyQXixE+OGZmUJWyvVDWuwz10wCNEzTbNBFl
+        m/EOqJxgoHmchubEFaOcTIDnmJbHDNfyiI4rp+JcywwD10sbwiN26xHHrANNP5nGvzuFX0ceI/f6+oFi
+        McKHZdcz1N6hP5XdNBDTPQNQTmMJUwyrmo6BegozzUDLDA2qudg+6lka1E9i0DoTZ/FnbO8KcPdsq5At
+        r7RNTD/6JhUOIT9FvjhC4ZOBj6IOFIsRPrjdS2hh3nE0807trMoRBIMbQO1gWCyE1TzhuLY5DlqXGWhd
+        iYPaHYc2Fw3tSyzXPs9yXS4O8N0LmXWG+Be2wdO7sTCWE5D4sCg/6UcE4ccH7MCBYjHCB5fLiV9Kl5HW
+        0H3paqUajPjPG/3AdS2ycf08x2rcLLRuYFEeDlTeOLR68Jv9ehwMZAzsuwD3hlwglde7ejWq41P4UO1L
+        SKICyEcEXj1ZJD7qJAhSvhRFQ1PFjYZuMJFRGN4Dro9gweCNgY5koTvIcYZgDLpCMTDRAFYGuDqbG06l
+        l8L5G0XR0owzxubM0x8vO+wSht5FXj/16soKBHxo7cu1bzS2aUqvlNVB3aNlMIcBLM8BxmIAPoCFDQAn
+        fhUDnScMUm0fZJXXL/797OXQhY9OgrXsBLR/lsp1FF8s2wmHUgObkYQsCZYlSS4WI3xIPIQTEJhgkEIb
+        Xm+KSqd7/1qBfPJqRROdrzVxisEpUNpn6VrTw+3bjXr288LyTUV98+1es+WYtjK76eo7CLrTjoLX9Edo
+        v/xjUGd9bA6Gto5t7QSRhyQPFIsRPpD4zyQhCW1uounZGXTn/v3XSqruv3fuUvo/5JXVWQUV1WXFivLz
+        LZrWD7WG3p+Yh23I61lHkyb1u8V/enMl99cI6k6/BV7L+6D77EfQJvunitzyf4fcfoV2w5dk4dsxIKHw
+        dl+lbEFl9xpQ2pUMZLEMoWGbHTW1tSBleyta2VhHW5EQIvGD3EN5kX2g7eclf0ldyvstgvqPvgckXmH6
+        S6lgasip34oyrycXixE+CMjCzxoCVTYreVkD5kFktgyjBnUz0nTqEBWikD9ASIgg3vX2wpJV/xoa6W78
+        2Z0Pjs7JsLDmT96Ap62/gZKrH4LTvXEyuViM8OH/ldXWoUVkkMSySOTxedHqigs5nXNo3DGLtFW5v8j9
+        w5vOG/gZdvZ3x+HUhYvgXHp2JrlYjPDh68hKiFrBLC3OpUzMzLxmHR1FmnLZO9JLn4yfO3eOkytqH5ME
+        9dPkYjHCh68la9X9QtbTeTQzP5uyuu6WPJ6aQ/qeoe+vrq3/ann52Q9DofCBYjEiODxEGMHhIcIIDg8R
+        RnB4iDCCw0OEAPRfhqpEfH+voGwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnTimKiemTheoMa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEsAAAAiCAYAAAAXtSR4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAetSURBVGhD7ZdbTBvZGceP0VattFW7m6qbiLaqlKoPXeWl
+        qvqw2kqVKnUbVZW2lapqu1KrbrIbNW1KstmELLlBIBhzxwmYSwhXY4OxzcVcvMbEYGMChIAJl2CCzWXx
+        ZcZjjM0lnrFnvh4TaWSy89Bqnybi4af567Psv/zTmTlzEAAc8j8iODxEGMHhIcIIDg8RRnB4iDB88JME
+        IgIEIik/CoUptOCaRbeKc1B1czNa97i+29Xf+bayrf2EUqM7oTXo3+4zdv7A0NuDFpwLKLQZRBQVQF7S
+        g7wBD/4tYZKLxQgfkmRJtiJBtLQ6j26X5byVKy/PkdboRj4t0K+dLzRupBWZvvyPrGc9o0gzfyWnsNJk
+        Nb5ntY+gwRELIkOEBMuSCIlKkFwsRviQkJWADBIoshdAo1P2v6ZLq31ni+2QrvJA2WAUVI44aGfjbO04
+        A1mdQbhQ9RTSZLq9grs1GUZzz7f3nkeQj9w4ICiZ5GIxwgc/kVhVpGRnbxMNj1n/9q8cbeRzpRfyrAA6
+        J8uubnNRYo/bDkbjoTDNbY17WbrUDnCr/zmcyTNBRZOyIxwOHNvdjSAqSEgwiesBkovFCB9IkpIQpBdN
+        OyZ/mZbbsnNNtwmlYwD5NgY0T+jYYoil3REutrrNxlxbLGN0xuliC8MVjTKQN8jBmQIjqDp6Cibn7OjB
+        eD/G+BWSi8UIH/x+L1pbW/xWgUJl/PS+G0pGAYqtUci3MCA101AyHIV7EzTUT0RBbmdANhSHQvx58XAM
+        yuwc3O57Dv+WauhGfe3ve616ZBjSfYXkYjHCh82QB408HD55vqgjIrNgEVhCrmkPsvvCkNUdhptdIbje
+        ha+GMGT3b4NsYA+KLDQUDTFYGAOlWG56/RzcrWupXVlxp7jcK+hlkovFCB82fMuoUdeZd7HWAcUjeKX0
+        72A5W3BNH9znhpbCBOG6LrBPZlcQpMbt/ZVVYo1B6cP4/nduyjU+l2vhDZfbiQUdJLlYjPCha8BwJL9G
+        ZcvSevdXVWbXJpYShJsJMToSstoJyNIQcKudxBCQrScgvz8Cd4ZoTm7Dt+YIBq+uy3JdZGzMmjrxaBS9
+        THKxGOFDrbL+eF61ek3WR0IZXllSfKvldlMg7QqAtDMAuZ0k5kXOx/OS/hAohnehejTKVWEUIzSnmADI
+        qOqJ9Q0YPjAO9qGXSS4WI3xo1WmOFNSobQUDJFTgXVBhjXKVQztchWUbFA+24a4ZryLzNpTja/XQDtTZ
+        o9A4xkDDeJSrH6PZmocxqJsCuKboZB7YvvizZWQAWezmAyQXixE+OGZmUJWyvVDWuwz10wCNEzTbNBFl
+        m/EOqJxgoHmchubEFaOcTIDnmJbHDNfyiI4rp+JcywwD10sbwiN26xHHrANNP5nGvzuFX0ceI/f6+oFi
+        McKHZdcz1N6hP5XdNBDTPQNQTmMJUwyrmo6BegozzUDLDA2qudg+6lka1E9i0DoTZ/FnbO8KcPdsq5At
+        r7RNTD/6JhUOIT9FvjhC4ZOBj6IOFIsRPrjdS2hh3nE0807trMoRBIMbQO1gWCyE1TzhuLY5DlqXGWhd
+        iYPaHYc2Fw3tSyzXPs9yXS4O8N0LmXWG+Be2wdO7sTCWE5D4sCg/6UcE4ccH7MCBYjHCB5fLiV9Kl5HW
+        0H3paqUajPjPG/3AdS2ycf08x2rcLLRuYFEeDlTeOLR68Jv9ehwMZAzsuwD3hlwglde7ejWq41P4UO1L
+        SKICyEcEXj1ZJD7qJAhSvhRFQ1PFjYZuMJFRGN4Dro9gweCNgY5koTvIcYZgDLpCMTDRAFYGuDqbG06l
+        l8L5G0XR0owzxubM0x8vO+wSht5FXj/16soKBHxo7cu1bzS2aUqvlNVB3aNlMIcBLM8BxmIAPoCFDQAn
+        fhUDnScMUm0fZJXXL/797OXQhY9OgrXsBLR/lsp1FF8s2wmHUgObkYQsCZYlSS4WI3xIPIQTEJhgkEIb
+        Xm+KSqd7/1qBfPJqRROdrzVxisEpUNpn6VrTw+3bjXr288LyTUV98+1es+WYtjK76eo7CLrTjoLX9Edo
+        v/xjUGd9bA6Gto5t7QSRhyQPFIsRPpD4zyQhCW1uounZGXTn/v3XSqruv3fuUvo/5JXVWQUV1WXFivLz
+        LZrWD7WG3p+Yh23I61lHkyb1u8V/enMl99cI6k6/BV7L+6D77EfQJvunitzyf4fcfoV2w5dk4dsxIKHw
+        dl+lbEFl9xpQ2pUMZLEMoWGbHTW1tSBleyta2VhHW5EQIvGD3EN5kX2g7eclf0ldyvstgvqPvgckXmH6
+        S6lgasip34oyrycXixE+CMjCzxoCVTYreVkD5kFktgyjBnUz0nTqEBWikD9ASIgg3vX2wpJV/xoa6W78
+        2Z0Pjs7JsLDmT96Ap62/gZKrH4LTvXEyuViM8OH/ldXWoUVkkMSySOTxedHqigs5nXNo3DGLtFW5v8j9
+        w5vOG/gZdvZ3x+HUhYvgXHp2JrlYjPDh68hKiFrBLC3OpUzMzLxmHR1FmnLZO9JLn4yfO3eOkytqH5ME
+        9dPkYjHCh68la9X9QtbTeTQzP5uyuu6WPJ6aQ/qeoe+vrq3/ann52Q9DofCBYjEiODxEGMHhIcIIDg8R
+        RnB4iDCCw0OEAPRfhqpEfH+voGwAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="btnHienThi.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEsAAAAiCAYAAAAXtSR4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAApRSURBVGhD7Zl7VFVVHsf3bZypcc38UWtmVqvVOJOSkvlM
+        MjFRisxyjTWWj5RAkTTMVFBAQA0zs9S0lFIyFC3DeIYPEC5vLg95yBsUL/LSewF53Qf33nMf53znt1Fv
+        VLTqz67jH991fntzztn7fPj9fvu392UA7uk3atjOexpew3be0/CyG2ZY7bLAxmySyMw2gdlEG/+77PZ9
+        Mt62ShKTbj9nkczMIOmYkdTSaWQDZrDL17VMQ9e+ASu70WdmXXTV28DUA2C9ph90+50OI7vxi7Akm8ws
+        0cfpqG2VeL+MYMmGg9XaZaI22JX/J1hcHAaBIi+yMBPZnRowg1mkPomJBEyCSN4mEhyBYGmZSdIz5Q39
+        COUN7ahGlY4J9IxeEJmq33KXw5KsMosVMonAANIfmrpMCxPkV1boBMvDNgpFC0EUyaNEgiXAwowwMStd
+        UwvbXYMjsqtOpNUfjMuo31xYpZ7YoTGzPkFiBvEugjVUPNQEM3kXQTHYpCePpyuz3osqvVyi7HvfCjzC
+        YdlEClFIMmqT55HHQWKns9rfCDhag+2xzdbAo9WWHcfKrxyKKfyqtLHLTUee1Wm8+2CRR5FsAxSK1r/l
+        12l2hkVdUh0r0Ns+i69La+82Ool0n4XC00ahSLBkAsxkW1msvOVF/yO1Ns/D1dLre8uw5osGaeORamyI
+        KNAkFrWu7hbAtBbKZXcTLNh4+JlYl8HsFX60QREec8W2M6kN4SfrB75LqwkyiOI/zHTvbd3Hcxq3Y7Pb
+        Fq0/Umd+7UC1OCMwEx5hCszfrsCbn9VgQ2SR6WxR+zJVv0jvJWC0AAwz9u9aP+sQRYlZLTzBSxMTc1tL
+        go82iFtjG+G5rxhhp1oQHl3ce6np5jzuXVZa+SiHUYInT6Prd4qWtUs/ysGbB+rw6s4SPBeSDY+tuXhu
+        ixyv7VbAP6Ki80xexwyeu7QUlj8d+/euHzX4Cmi22jgoVt+iXxceWYIPkmrh+2kDlh0oxorPa7HjdJsl
+        Mqk2sksrPMCfsYmQmSl5G8m+WK8e/UV8aWTYsSK1174cLNhVDPetRZgbWojZobmYH56Pd/ZlXrvSYRqj
+        J8BDx3YE/ahBuYrpaAXst0mzD8e1fB1+qsG6ProSSz4qx5ID1Zj7fiFWfd4khZ9s1F642LScexcHZaKw
+        tRDgJpV+sMRQ3tROislv/HJ1RBHm0zOzA/MxM+QiXEMU8AhKw+fJjVG8lBg6tiPohwb/T3MP0RnZ+fKW
+        gyFRdbrt8W22V9+/hPk78uARko/ntirgtiUf66OuYd/pqoYG9cBojZVCl0DxmosXrSoNB3crh8krOtf6
+        7s3RuwVnw5UD26KAa1Aeln9Q0H21U3AeOhFHkN3Q2nRMKxmZUt07Yt831SlhcRV4/cNyuG+h3BNKHhGa
+        gxfCCshD8vDyziIKx2bjx6eqIopaev5opWqfw6L3yIywygZoZdQTeAN5T0xu86FZwRekZzdnwj04Cy4B
+        ufAIyERCfvPKO2M7iuxGP8HSw3RfVMaVqOCoarP3J+XSTP8szAwjhRbg2dBLcAsuxCzyDJegIp7ExV3R
+        FVVpldfWGKwWJpjNgzmPaq4RelhkfRaR9dOK19onPOj9kaLj6XW5mB2gwOz1WZjkl4Jtpyrjhk7EEWQ3
+        +PJf09zntCempnbdl1Umt02pmMFhUQngvjkXczYUwsM/H88TsOkEa1agHJuOlPV8GV/1YY/OeL9V5IXp
+        4Oo4WKgaybP4imekmm3bieqaKX6pmL4xB67vZuFJvwysOVRSPHQijiC70WeRRn78jTLOO6KRckshJm1Q
+        YNrmEkwPLMTMgCwCloNZFELTNuZhsn8hpmxU4PmtpQg+fl0Vm9cWxEHxPHULmG0w4fM2XwT2JNQWT157
+        BpPXZ8DlnUyMXZONxbvylUMn4giyGxnlLXOWhqb2uwWdN8zxTx1w35RmdKHcMnWTAhPXp+PpwHRMCcjB
+        U5sVVDdlW+ZsOKt335xufDkszbx699m2RnXfGO5R/IRCEo20dzSRt1LNRp4W/nVlxYTVyZiyTo6n/NLh
+        5JsGn/0XK4ZOxBFkNy63997f2m16qEkrPNyqMT+kNln+dSyr+dizbydjGn2gy7sZmLhajrlBchRc1fy3
+        wyD8Vakz/1OpNT1yrUt4UGu2/Umg0KMNOJUgggy0WOiowNVQn9+B4pZx3ucwdQ1B9z2PsSuTsS2mwXFz
+        1rVOLeuhjW4X5Zku2r/xHFbXrh/3UoAcE3zlmL6WvII8wmVVEk7IW/dp6e+UyJleEtjNAYmZyKPM9CyH
+        BfBNtpV7FStp0s17ITBNGO9DYeibiPE+5+D8VjKOZ7VtGToRR5DdaOrQ0keDqQlUN61iGvrwmwL+vmJP
+        iWrMihQClopJq1IHrz57izQlV/VOHf16SuRGknnw/IpX8Tyxm2i7xN9JnvWXXafKsyetSsB433MEKglj
+        vJOpSE2zljUb5t0Z21FkNzisLj2YimBxUDw5k+47cv7qwcnkCeNWXMD4lSlwXpkK940p2B9bm5FX3e3M
+        4fDnB/eKJF6QaslDe3TWPx/6vjruhYDvMdHnezh5UfjRO8Z6nsamw6WKbgNG3hnbUWQ3GlUa1k8fqaWP
+        11Eo8fMnHYXW1W7Toz67s1udPRPh/GYSxnmfxwTKOQu3Z2FHdGVjcl7TygqlanbrTe1j1/tNj9a2dM7M
+        KW2ddyCmMtmT9oaTVp2B07I4gnQWY95IgseGRKSXdSzSO/Kpg8ZoYTaCI5L4lUsgdRlEdjrz2soFWyh3
+        ecXiieVJeMIzGc7LY/GfsHz4R1SZtn5V2rM/tqxsT0xZ6fbjZT2BR8oM3rsv2lwomTsvP0P30zNLYzHN
+        JwG7YmoyVP2WEd0Dgz+EOJTsxp0jlzvisCzkZR0Umi09omxb9OXIlzelY7JXEh5fkohxBO3xN2LxzNty
+        LKDt0NIPFFhMeuW9PMzyT8V4rwSMWZyMx15LJMCJcH0rDn778/uKWwW3HqPEOrSWH03EEWQ3hoK6A4uf
+        KKh1YO39EitpNY48mFAX8UrQBczwkxOwBIxdEovRC7/FqAUxcFpEeWlJPEa9Ho1RC6Px2OJ4jF56FlN9
+        U/D8xvNY+2lmb1adamkP5cSbgsS6TXzz/fMJ/Z5lN34J1nXNLbVRPlPrRZaQo/Rdu6dA/WJABtzWpeEZ
+        n3hM9YzDRAoz50Vf40nPk3hqRTxc15zDXP8LWByajL3fllyoUhld9TROH+VDDqxnsMRwLNmNn8Li4r8B
+        6i3SoDQk3r7RZ2EF9f0un8SW5qw7mDGw7MN8LAjJwNyANHgEpOClkHR4hWfp39mbo9p1olieVtq2qM9k
+        GdkhgPVapVugbmvoRBxBdmN4WBIVl3yDfEv8BLVTIzC1VmIDkEbUdWknZNX3bvs2Wxn5RVLdscPJDdHR
+        8qsnM0ta51e2GP7dJUgP8JMHXuC2D4h3DyyBQPwGyfgGuZdCkpcVLVrj4LEMr61u9EpMqRaY4fb7+CFg
+        h4nyk4HAUjjfVbDu6dc1bOc9Da9hO+9pOIH9D2Mu/xn5N6e+AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnXoa.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEsAAAAiCAYAAAAXtSR4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAVISURBVGhD7dh/aFZVHMfxu189003ddHPPs2Hp0lAsSUsj
+        f/yRqUVqNGyFoRVTywVRGja3WWYgEhFSFAoxEIyUwoKMIqY5davmoiQq+mVU9IMg+kFlP9Se3p9n585z
+        rqetP88fz4UXz/M9u/c83/Pduffce6NsNpv3P3kb8/y8jXl+3sY8P29jnp8TpO8/MJgSVJvP5N9uwWfo
+        xuMYj+Q+Q7JzCZET+AZgDMej6MOLeASrcRXS2IespRm+fgZl5xIiJ/ANwBiJA7ALIn/hS/xqtf2NO6EC
+        F8PXn5edS4icwDcAywwsx3rsxrv4FqdhF1BUxE/wGp7APbgGGfj6zrFzCZET+AZgWYs9uM7EunZNwtVo
+        wjbshU7VH5AsoLyK0Uj2nWPnEiIn8A3AUGHuhgasmfQO7oNvppRC17FL0Yh2PIf3sAPlSB6TY+cSIifw
+        DQALsB+/ITlTvsAc6ELfgCVYjGuxEJp1Ov563I5BV0k7lxA5QSJ5zRCter8jWaSYVsitOGW1DUar5ggk
+        fyvHziVETmAlXogO+AYc08V7BexinrG++7yJCti/NcDOJUROYCWuFS850E9xxHz/Bjq93jexZtYmaLX8
+        xbTJLuji/7WJtQDYv+OwcwmRE5ikdZf+MeIivAQVQdcjrYTHoRtS3UfFRfgR9dDxH5g2zTJd5NV20LTp
+        tI1/5xx2LiFyApO0iqKBfYilSEHti/A85kHXs/NwDNr3J0yBVs14tmmG6YI+Ciqw2u7FQHGS7FxC5AQm
+        6XXowvkmjl0MnX5aGbUCqu1lxMXS31WseGbpWbEME6BVU226xtl9OuxcQuQEJunLMS4egEWPPLpuadBr
+        TNtOE/+MadDjTVysXhRgOnSa6jFoPpL9DrBzCZET+AaQoBVQhXjAxPpUrFNOj0N2sXSt0z663/oHuquf
+        bNpcGzqjzKY3nFxC5ATegbiehgrxpIl1o6lYD9KakUWIi/UUtM9KE3+OStN2lgr1YG9U2bjNySVETpBp
+        PcwASJ7PTNuRKL3xUC62BrcFGvgLJtYCoFj3WslitUL76FPxW9DfaaNP+s60HY1qH3o7qly2NSooLHZy
+        CZETjL1rb1T38PGounlPVLWqI6pZ/0p/0c4W7FbYA58JFeoPxMXSKqp9NKN0zHYT6yE815f6VN/VdzwT
+        VTZsiaLCwkibnUuInKBoRFVUsaQtKiwbnUs+VT8rSrcwA3IzLjfwuWbgX0G3BHrr8B30SiYu1kfQPno+
+        1DEqkmK9qqGvrlyf6ju52bmEyA08W+qCGVFGp0x7N4M8yI1np2aRVj+tmDVQcXTzqmLpMUnvsXQN0w2p
+        VsNDyHJtaklv7Mr1pT59m51LiNzgP7ZU/RXR2LXPRrWbeioYLMXo1EzR6qeZ0wOtdlNNfAJ6KahCanXk
+        wt6Zrd3ce7NmVWrCTNPruZudS4jcYIitfPaKktr27vj1sp779ELwexPrUUaPQSfxJzZiA05xGp+pWbd/
+        VunE2aYn/2bnEiI3OHcrRgrlGCljlm/fV7u5L5tueT3Lija01sPoOllSO2U6x5eZvtSn+nY2O5cQuUH/
+        ANK4BJoGC7EUy3ATbhh+WcOuus3HTmfae7KZtu4hHOX068tWNXWciIpKbuP4G01f6nMR5mAaMiixcwmR
+        G/T/x+sxF4vRiJVowmqsKShONZdOvPKxYVMX7Bw2Zf6OIU1duLNozLgWjl2l401f6lPFV9Hm4UKk7FxC
+        5Ab9WwE0w0qhU68adRiPizAZGlz8fTDaR/tOMt/Vh/pSn6Og3yiBftPJJUTexjw/b2Oen7cxzycb/Qu8
+        YJ+9QLiNcgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnCapNhat.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEsAAAAiCAYAAAAXtSR4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAXDSURBVGhD7ZjLT2NlGMa/GccYNYRJRhej48Kl49J4+xdG
+        XWGMujDqQhNdiJrZDaMxGSeEcTmzQMOCBOR+LZdSLqWUXijlWmCgpVBubYFSWm72dj6f5yhmgt8gcdWU
+        Lp6c9u13enJ+ed7nvN8RUsq8zihlMS+1lMW81FIW81JLWcxLLWWR8nq9YmJiQiwtLYlQKCQ2Njb+U1w3
+        Pz8v/H7/lUAg8NnIyEgz/qMRqt3c3Hw7kUiIYDCor4lGo8rrZrOURer/wlpeXr7mdrvv9fX1LZvN5r2p
+        qam94eHh1MOHD4sB6kmAFAsLC7kNiwqHw6cqEonwnB+MRmN0YGBAjo6OyrGxMQlY/tXV1ff4X5OTkwQq
+        YrGY8rrZLGWRehQWW4fHxcVF3RVwiZibm9Pbiet4ZA1r3oKbPIAlnU4nISVtNpt7Zmbmw7W1taew5gmr
+        1XoDzvsGbfmS6rrZLGWROoZFF6yvr+uOwI0KOEXMzs7qsNBiAu7RfwMQfr6N9tu2WCwSa2V7e/sujrcA
+        6hJAFQDS+4ODg5O9vb17WP+p6rrZLGWRehQW84hADAYDw1tkMhl9DdvO4/EIuESkUimCvNPT0xMlLLvd
+        LgEm5nA4fvV6fUVY9z3c5kPosz234LgHJ6+Z7VIWKRWszs5OvRWTyaS+ZmtrS4fFPOOTDmAqTCZTiq4C
+        lBTO+QNQEgZDR6K1tS05MuLUXC6XxJoIXHn+YLEdeURbfYtQX4GzJDPLZOrN2O2OtN3u1CyWIbjsL7cx
+        +NGGG/j/z09eM9ulLFJngbWzs8M1l9BuNzkq9Pf3M6dkXV2dbG5uBRiztNkc2vCwHYHvAjynxDoGvw0t
+        /PLJa2a7lEXqjLAKhoaGitva2sJoLdnV1SUbGhpkTU0NoPTL+fkFabFY4bJ+gLPoNat1aBZPzaKDg4N/
+        XTPbpSxSp8HSNI3ACjEyfIWW26ajcMw0NTVpjY2Nkt9xvlxeDtBhqDXvd3YaI4Dl8nimP47H42Jvb095
+        3WyWskg9DhbnLYAqALQvu7u71+gmHDWAki0tLcwjiVlMrqysaHDbdm1tvam6+vffjEbT3akpz2sYI8T2
+        9vb5gAUIrBd3dHRsoP0kjrqbmFUEB4gaJBH0m3DYT6FQsABPQtHR0YXzpvTzcxLW+Pi4fnOYowoxIrwL
+        WN8Byi9wkI8tx3ximBMafmPr7WD4ZEvuI8t+RrtdDodDoqWlNbdh/b2tuQxIX+Bp142WmgWUNcCJwk26
+        k+rr65FJzXSRxAgRx2R/hM9xzFilu7u7L3D2grNyHxba7zk84n8EoADdwzwiJLqIcABPo5vQaqnp6ek4
+        wj6BsSCCwfQOHHWN/0Eg5wEW93JfYwTYqays/CePGN6AozHQ0WoaZyZM6CkMpFF83wWoe3DU8/wPbon2
+        9/dzH1Y6nX4RIJwERRchf/T5iQ4zm80ZuooA6Sx8zmBNEK67D1CFPJ/7xHMDKxaLvYEsmuVTDlkk3W53
+        prS0NFlSUpKuqqrSW5Di7wAYx8b5QTgcfvro6EjfI54rWLiRQsBqoXOQW2xBh8FguAl3NZeVlcWrq6v1
+        tiQstOTc+vr6K4B1kbA43cOZ+uDKKZ2wGhoaRXt7Z27Cwk1eQDbdx9PuEE+2GsB4FeIg+np5ebm/oqKC
+        Ocb249uFaWykr4ZCoYvcUBMEX91Q/M43Ej6fT5jNgwL7Q7G6uppbsPiKGAH/Jlz1CSb266wB4DN8OiL0
+        I3BUAmF/ODAwkECLth8eHj6Lm7/AbQxfFx/reFvD1uR/er0+fQeQU7B4Q3w7ypYBNIHR4Mro6Ogt5hVa
+        M221WuMAF7fb7Ra/31/EfGJOPU7HG+/NzS0dWE7BCgQCOigKo4FAO17HnGVE6+3gyTjtcrksODYA4kfH
+        OUX3nCbmWDDIllzMTVjMGk7yyKoCDJ3vwFF3kWW3MdF/gBHiKt/B86bPNay81FIW81JLWcxLLWUxL5Wk
+        +BMRGWiFzqg2vgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnThem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEsAAAAiCAYAAAAXtSR4AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxMAAAsTAQCanBgAAAecSURBVGhD7Zl9TBv3GcefbspGMLZp1qYkJVMHaRKhkDRN
+        6NI1Xdqu+29apVWqVmnatGlTJ21tlWlTp0RiKG3TdA0hL7wngHlLCgkYwlsaEt7BYIPBGLDNm21sn+98
+        d8aYBpLQ8ew5LzGm86r9a4s/Pnq+9/h39+i+eu539/sZEHGD/5OwyQ3CEza5QXiCguN5wvMN8MDwAjh5
+        FlhRfIwV5x9ze0XgRBE89DvD2b6R0KKRSlCsmcL9Fx5BBJaiyzMHguCHWc4IFrcWRK+XctPg5KaA5Rzg
+        Zq2EbR0MZw0QWjRSCQq3yIFbcBPMOljRA3Z2Arosn0K75WOYceqgaPAgnO76Fhjtamgw/Q6K9Klg87rA
+        5mPAOu9ch1tkwMG71hWNVIJizaz1SI/ZlEujVOt/dqJs9GBhiWFvmcqQWqka2VdeYkituGxMUan0Bz6y
+        iKats34WZhZc63DP82AT2HVFI5WgkMxivQJ1khcYgeagh0jHZudQ8k372+7uhSNLHd407PD+EDuJDu8L
+        2O0/+q/Wmd9r7Zz1cW5+ka7hA5fIgouMZqijuHku+sySjLJyJrBxM9RNC2QUFzCLn1+CWxOnE6umDq40
+        ckqsYzYTsYSMiMEmzxN41fySUDBwRFY8+DrkDRyCtskz4KYXAcMz0WkWT10xaK2Dgu6fgsNDkzU9fpJZ
+        wvwDUBv+nFhpTrnXyD6JdS4yjKh3KVcJbOaexkpTGptx59uy9DsA5fqf06TP0KRPk3v0muUHg/0WnGjY
+        BNeHj4HgXwHGy4M4vwz1o8cSK0y77jW4n0C1UxmgzqlAtSMem9gErBh/njt5O052Vf82cMJ8AAc3G91m
+        jc61QnpTHFRofwO+Lynnvw9e3zJMODoTq8zPL9c5H8eaOeVDFFhjJ8NcW7Bq4sdus6Mr1iP6gRcXySzp
+        k8IBrMAD7/NGn1mC70sYstZDRtMW+KT1GVAP/w26zGWgmSyGSddwQuV4yj3JpGu2/1Btj8camxyvzcnx
+        yugLDpvTBrOMGWZc4wEsDi29RQ1g9YyDlSb70KKRSlBY3cMJJZo3PsjuSkvP7kk7mdmR/FFW577MrI6U
+        s1W6d/I+n3husdoeh1VW5UMUeG02HqttsVg1dnjxivbXudm9aWfz+n4UIL/v0Gf5PYdP5nS9km5ixr4X
+        WjRSCQqjrSetxvSao5193dvqfPVuK3PkfovrFWxhjuJN16t4w77/qyvTsXh1WhlCHF6dkuEN26GvmqWx
+        rpexOcgRvM38ZOn6+JveaZdlR2jRSCUoBqab9l8eScaK6U1YNhkToMIcg+WW75LehBV0XDmpJBTrscRj
+        uXkzlpq/g2VmGvsQ6bjSEoNFw/tWeifV20OLRipBUd7zx9TCoSSssCiw3BRHBigJ0oH4COn4EUosMyn+
+        J6Vm6jrLFiwc2r/8QW1iQmjRSCUoVF3vpObpdlBXKFE1ISfiCUmvUTq+HlUIJV+jeFyBFSYlntc8s1zS
+        /afoMqth6ExqjnY7maKgG5VjyVg8Fo9JNy0P3HggZ1QEKSaKjPR7UMu/hoJMjMXs/j3Lo9ahbaFFI5Wg
+        GLcbn8vufwovjcRhgV6OhUTBUBxFJR1vlnKrl0aUeNlAOQPlDDK8RPHSsBzzhxSBsfkhFAzGrV7Sb169
+        2JeyPOW0JYYWjVSCYnhacyCrfRsW6p7CvP6tmDdAUZeAxYPfxwLquMv6nZg3SKboZZg3rCTItJFYGhNP
+        52yjMQmBc/Kl8wa2Yr52Gxbrt+OFjl1omhuPrs6ij8gtDYOnTjQPZ2a0BMjKqB88fTKr6eg/ajUffnah
+        K3khVyd1jRxzh8gs6iapo3IGZXixbfdyg+5sfsvw2cC5X4ycz7imOZ5RcPtXHxbe/uVxG2+VhxaNVIKC
+        EVkQFwTwzS8Rd8FPyxwHY4NuYzUtX5aezGpLXszRUlfp5JitU2IOGZejVeIFyuXcSbN7hJUYv+8++Lx3
+        A9fghQVaH/Lg9s2Bh64dWjRSCQpGEMkw29p2socW0bTO00y0QM6t9xMz2559kN0fR+YQA0q8OCBFMo5y
+        p2/u5NpHa2WLCw/oHFpI8yzhAbcogMfPAEsL6tCikUpQMIKwZhYZxXkE6q4VqNWcg9/mJj595s6u+9ka
+        OZ4jc85rpE8CGZ4nndOvxE9adnLvq/bK7oxUwoxzArxeX2DPXtri4Rac0W8Wz3uB5TxwqvYX8IeC3WTW
+        ngcX+xSYRSZlUTzXS1ETh9lk3D+/SPG8V7xX9m7Js/DX8gPQb2oC38JSdJvl9trBI0h/iYkUySx6lAan
+        uqDNUJ9wrm3v4tkOGZ4JoMDMQJSvnu8ms27udr5XuGfzsaLd8O7lJJCiZrw+sO0TlWZJO6OzzASMWUZh
+        bPIRRpienYURs5HmrP2r+f0/wNyeJMzpTsLc3iSUPjVyNTsw89ZhVt1aENPYWQyNnUVQ354Pzd1lNMG7
+        gY/GOUv6Y8I4rYMhoxb0Y2sYTHpo7WmM/fjzNz5Nr3m59ET1S6rjVS+q/n71RZWq6y+qU+rXVKeuv3Xx
+        emeR4kZfJdT3lhMVoO4uBXVPMegm20Hw8uuKRiphkxuEJ2xyg/CETW4QnrDJDcITNrlBOBD+DfFDlt9U
+        nGcfAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
