--- a/Nhom6_QuanLyTiemBanh/Properties/Resources.resx
+++ b/Nhom6_QuanLyTiemBanh/Properties/Resources.resx
@@ -118,19 +118,25 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="banh" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\banh.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="banh1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\banh1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="logo-truong-cn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo-truong-cn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="banh2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\banh.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="daubeppng" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\daubeppng.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="banh2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\banh.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="pdf_Format" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pdf_Format1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo-truong-cn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo-truong-cn.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="banh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\banh.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Logout1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Logout1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
